--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,16 @@
     <string>pk.eyJ1IjoibW11IiwiYSI6ImNqc2JqYXZsZDBjZWI0YnJwMTdoaHN4NXYifQ.he70cWtXMD5okEryWYiqbg</string>
     <key>io.flutter.embedded_views_preview</key>
     <true/>
+    <key>CFBundleURLTypes</key>
+    	<array>
+    		<dict>
+    			<key>CFBundleURLSchemes</key>
+    			<array>
+    				<string>pl.kmdpoland</string>
+    			</array>
+    			<key>CFBundleURLName</key>
+    			<string>myappredirect</string>
+    		</dict>
+    	</array>
 </dict>
 </plist>
