flutter redirect url

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="callback" android:scheme="npower.kmd.pl" />
+                <data android:host="callback" android:scheme="npower-flutter" />
             </intent-filter>
         </activity>
     </application>
