--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   uuid: 2.0.0
   url_launcher: 5.0.1
   uni_links: 0.1.4
+  scrollable_bottom_sheet: ^0.0.9
 
 #  simple_auth:
 #  simple_auth_flutter:
