--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -18,10 +18,25 @@
 	<string>$(FLUTTER_BUILD_NAME)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>weblogin</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>npower-flutter</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>MGLMapboxAccessToken</key>
+	<string>pk.eyJ1IjoibW11IiwiYSI6ImNqc2JqYXZsZDBjZWI0YnJwMTdoaHN4NXYifQ.he70cWtXMD5okEryWYiqbg</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,20 +56,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-    <key>MGLMapboxAccessToken</key>
-    <string>pk.eyJ1IjoibW11IiwiYSI6ImNqc2JqYXZsZDBjZWI0YnJwMTdoaHN4NXYifQ.he70cWtXMD5okEryWYiqbg</string>
-    <key>io.flutter.embedded_views_preview</key>
-    <true/>
-    <key>CFBundleURLTypes</key>
-    	<array>
-    		<dict>
-    			<key>CFBundleURLSchemes</key>
-    			<array>
-    				<string>pl.kmdpoland</string>
-    			</array>
-    			<key>CFBundleURLName</key>
-    			<string>myappredirect</string>
-    		</dict>
-    	</array>
+	<key>io.flutter.embedded_views_preview</key>
+	<true/>
 </dict>
 </plist>
