--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,11 @@ dependencies:
   flutter:
     sdk: flutter
   mapbox_gl:
-    path: ./mapbox_gl
+    git:
+      url: https://github.com/tobrun/flutter-mapbox-gl
+      #ref: 9cabcc57e63fbc9be4fafee08e6435a1a8c71d61
+      #path: packages/tobrun_mapbox_gl
+    #path: ./mapbox_gl
   uuid: 2.0.0
   url_launcher: 5.0.1
   uni_links: 0.1.4
