--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,12 @@ dependencies:
   uuid: 2.0.0
   url_launcher: 5.0.1
   uni_links: 0.1.4
-  scrollable_bottom_sheet: ^0.0.9
+  rxdart: ^0.21.0
+  http: ^0.12.0+1
 
-#  simple_auth:
+
+
+  #  simple_auth:
 #  simple_auth_flutter:
 
   # The following adds the Cupertino Icons font to your application.
